--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mongoose-exists",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "mongoose validation to ensure referenced object id exists",
   "keywords": [
     "mongoose",
@@ -31,21 +31,23 @@
     "url": "https://github.com/lykmapipo/mongoose-exists/issues"
   },
   "homepage": "https://github.com/lykmapipo/mongoose-exists",
-  "contributors": [{
-    "name": "lykmapipo",
-    "github": "https://github.com/lykmapipo"
-  }],
+  "contributors": [
+    {
+      "name": "lykmapipo",
+      "github": "https://github.com/lykmapipo"
+    }
+  ],
   "devDependencies": {
-    "chai": "^3.5.0",
+    "chai": "^4.1.2",
     "dev": "^0.1.3",
-    "faker": "^3.1.0",
+    "faker": "^4.1.0",
     "grunt": "^1.0.1",
     "grunt-contrib-jshint": "^1.1.0",
     "grunt-contrib-watch": "^1.0.0",
-    "grunt-mocha-test": "^0.13.2",
+    "grunt-mocha-test": "^0.13.3",
     "jshint-stylish": "^2.2.1",
-    "mocha": "^3.2.0",
-    "mongoose": "^4.7.7"
+    "mocha": "^4.0.1",
+    "mongoose": "^4.12.3"
   },
   "dependencies": {
     "lodash": "^4.17.4"
