--- a/package.json
+++ b/package.json
@@ -41,15 +41,15 @@
     "chai": "^4.1.2",
     "dev": "^0.1.3",
     "faker": "^4.1.0",
-    "grunt": "^1.0.1",
+    "grunt": "^1.0.2",
     "grunt-contrib-jshint": "^1.1.0",
-    "grunt-contrib-watch": "^1.0.0",
+    "grunt-contrib-watch": "^1.0.1",
     "grunt-mocha-test": "^0.13.3",
     "jshint-stylish": "^2.2.1",
-    "mocha": "^4.1.0",
-    "mongoose": "^5.0.0-rc0"
+    "mocha": "^5.1.1",
+    "mongoose": "^5.0.17"
   },
   "dependencies": {
-    "lodash": "^4.17.4"
+    "lodash": "^4.17.10"
   }
 }
