--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "mongoose-exists",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "description": "mongoose validation to ensure referenced object id exists",
   "keywords": [
+    "lykmapipo",
     "mongoose",
     "mongoose-plugin",
     "mongoose-exists",
@@ -39,15 +40,14 @@
   ],
   "devDependencies": {
     "chai": "^4.1.2",
-    "dev": "^0.1.3",
     "faker": "^4.1.0",
-    "grunt": "^1.0.2",
+    "grunt": "^1.0.3",
     "grunt-contrib-jshint": "^1.1.0",
-    "grunt-contrib-watch": "^1.0.1",
+    "grunt-contrib-watch": "^1.1.0",
     "grunt-mocha-test": "^0.13.3",
     "jshint-stylish": "^2.2.1",
-    "mocha": "^5.1.1",
-    "mongoose": "^5.0.17"
+    "mocha": "^5.2.0",
+    "mongoose": "^5.1.7"
   },
   "dependencies": {
     "lodash": "^4.17.10"
