--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mongoose-exists",
-  "version": "0.6.0",
+  "version": "0.6.1",
   "description": "mongoose validation to ensure referenced object id exists",
   "keywords": [
     "lykmapipo",
@@ -39,17 +39,20 @@
     }
   ],
   "devDependencies": {
-    "chai": "^4.1.2",
+    "chai": "^4.2.0",
     "faker": "^4.1.0",
     "grunt": "^1.0.3",
-    "grunt-contrib-jshint": "^1.1.0",
+    "grunt-contrib-jshint": "^2.0.0",
     "grunt-contrib-watch": "^1.1.0",
     "grunt-mocha-test": "^0.13.3",
     "jshint-stylish": "^2.2.1",
+    "lodash": "^4.17.11",
     "mocha": "^5.2.0",
-    "mongoose": "^5.2.14"
+    "mongoose": "^5.3.3"
   },
-  "dependencies": {
-    "lodash": "^4.17.11"
-  }
+  "peerDependencies": {
+    "lodash": "^4.17.11",
+    "mongoose": "^5.3.3"
+  },
+  "dependencies": {}
 }
