--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "mongoose": ">=5.5.6"
   },
   "dependencies": {
+    "@lykmapipo/common": ">=0.17.3",
     "@lykmapipo/mongoose-common": ">=0.22.1",
     "lodash": ">=4.17.11"
   }
