--- a/package.json
+++ b/package.json
@@ -39,24 +39,25 @@
     }
   ],
   "devDependencies": {
-    "@lykmapipo/mongoose-faker": "^0.9.5",
-    "@lykmapipo/mongoose-test-helpers": ">=0.7.3",
+    "@lykmapipo/mongoose-faker": "^0.9.6",
+    "@lykmapipo/mongoose-test-helpers": ">=0.7.9",
     "chai": "^4.2.0",
     "faker": "^4.1.0",
     "grunt": "^1.0.4",
     "grunt-contrib-jshint": "^2.1.0",
     "grunt-contrib-watch": "^1.1.0",
     "grunt-mocha-test": "^0.13.3",
+    "handlebars": "^4.1.2",
     "jshint-stylish": "^2.2.1",
     "mocha": "^6.1.4",
-    "mongoose": ">=5.5.9"
+    "mongoose": ">=5.5.14"
   },
   "peerDependencies": {
-    "mongoose": ">=5.5.9"
+    "mongoose": ">=5.5.14"
   },
   "dependencies": {
-    "@lykmapipo/common": ">=0.17.5",
-    "@lykmapipo/mongoose-common": ">=0.23.1",
+    "@lykmapipo/common": ">=0.20.2",
+    "@lykmapipo/mongoose-common": ">=0.25.1",
     "lodash": ">=4.17.11"
   }
 }
