--- a/package.json
+++ b/package.json
@@ -40,8 +40,9 @@
   ],
   "devDependencies": {
     "@lykmapipo/mongoose-faker": "^0.10.2",
-    "@lykmapipo/mongoose-test-helpers": ">=0.7.23",
+    "@lykmapipo/mongoose-test-helpers": ">=0.7.24",
     "chai": "^4.2.0",
+    "cryptiles": "^4.1.3",
     "faker": "^4.1.0",
     "grunt": "^1.0.4",
     "grunt-contrib-jshint": "^2.1.0",
@@ -50,15 +51,15 @@
     "handlebars": "^4.4.3",
     "jshint-stylish": "^2.2.1",
     "mocha": "^6.2.1",
-    "mongoose": ">=5.7.4",
+    "mongoose": ">=5.7.5",
     "shelljs": "^0.8.3"
   },
   "peerDependencies": {
-    "mongoose": ">=5.7.4"
+    "mongoose": ">=5.7.5"
   },
   "dependencies": {
     "@lykmapipo/common": ">=0.28.3",
-    "@lykmapipo/mongoose-common": ">=0.26.2",
+    "@lykmapipo/mongoose-common": ">=0.26.3",
     "lodash": ">=4.17.15"
   }
 }
